--- a/html/header.html
+++ b/html/header.html
@@ -108,7 +108,7 @@
              data-bs-toggle="collapse"
              data-bs-target=".navbar-collapse.show">
             <i class="fa-solid fa-user me-1"></i>
-            <span class="text-capitalize text-small-caps">
+            <span class="text-small-caps">
               {{lang.data.user}}
             </span>
           </a>
