Nyelvi fordítások javítása

--- a/html/footer.html
+++ b/html/footer.html
@@ -39,7 +39,7 @@
           {{lang.contact}}
         </h5>
         <p><i class="fa-solid fa-location-dot me-2"></i> 
-          {{footerSections[2].details.address}}
+          {{lang[footerSections[2].details.address]}}
         </p>
         <p><i class="fa-solid fa-phone me-2"></i> 
           {{footerSections[2].details.phone}}
