--- a/html/modal.html
+++ b/html/modal.html
@@ -1,9 +1,9 @@
 <div id="messageDialog" 
-     class="modal fade" 
+     class="modal fade ng-scope" 
      data-bs-backdrop="static" 
      data-bs-keyboard="false" 
      tabindex="-1"
-     aria-hidden="true"
+     aria-modal="true"
      data-bs-theme="light">
   <div class="modal-dialog">
     <div class="modal-content text-dark">
