--- a/html/root.html
+++ b/html/root.html
@@ -1,7 +1,7 @@
 <div class="app-container position-relative
 						d-flex flex-column vh-100 overflow-auto">
 	<header ui-view="header" class="sticky-top"></header>
-	<main 	ui-view="" class="position-relative flex-fill"></main>
+	<main 	ui-view="" class="position-relative flex-fill" autoscroll></main>
 	<footer ui-view="footer"></footer>
 	<div 	ui-view="modal"></div>
 </div>
