feedback tábla kijavítása és a header betűtipusok kijavitása

--- a/html/header.html
+++ b/html/header.html
@@ -108,7 +108,7 @@
              data-bs-toggle="collapse"
              data-bs-target=".navbar-collapse.show">
             <i class="fa-solid fa-user me-1"></i>
-            <span class="text-small-caps">
+            <span>
               {{lang.data.user}}
             </span>
           </a>
@@ -134,7 +134,7 @@
                  data-bs-toggle="collapse"
                  data-bs-target=".navbar-collapse.show">
                 <i class="fa-solid fa-right-to-bracket me-1"></i>
-                <span class="text-capitalize text-small-caps">
+                <span>
                   {{lang.data.login}}
                 </span>
               </a>
@@ -149,7 +149,7 @@
                  data-bs-toggle="collapse"
                  data-bs-target=".navbar-collapse.show">
                 <i class="fa-solid fa-id-card me-1"></i>
-                <span class="text-capitalize text-small-caps">
+                <span>
                   {{lang.data.register}}
                 </span>
               </a>
@@ -164,7 +164,7 @@
                  data-bs-toggle="collapse"
                  data-bs-target=".navbar-collapse.show">
                 <i class="fa-regular fa-address-card me-1"></i>
-                <span class="text-capitalize text-small-caps">
+                <span>
                   {{lang.data.profile}}
                 </span>
               </a>
@@ -178,7 +178,7 @@
                  ui-sref="users" 
                  ui-sref-active="active">
                 <i class="fa-solid fa-users me-1"></i>
-                <span class="text-capitalize text-small-caps">
+                <span>
                   {{lang.data.users}}
                 </span>
               </a>
@@ -197,7 +197,7 @@
                  data-bs-toggle="collapse"
                  data-bs-target=".navbar-collapse.show">
                 <i class="fa-solid fa-right-from-bracket me-1"></i>
-                <span class="text-capitalize text-small-caps">
+                <span>
                   {{lang.data.logout}}
                 </span>
               </a>
