--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -161,7 +161,7 @@
                   <button type="button" 
                           class="btn w-100 mt-auto btn-warning"
                           ng-click="$root.user.id ? submitFeedback() : redirectToLogin()">
-                    {{ $root.user.id ? lang.data.opinion_send : "A vélemény elküldéséhez kérjük, jelentkezzen be!" }}
+                    {{ $root.user.id ? lang.data.opinion_send : lang.data.opinion_send_btn }}
                   </button>
                 </form>
             </div>
