about us carousel forditás

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -202,7 +202,7 @@
                             height="50"
                             class="rounded-circle me-3 border border-light">
                           <h5 class="card-title m-0">
-                            {{fb.last_name}} {{fb.first_name}} ({{fb.age}} év)
+                            {{fb.last_name}} {{fb.first_name}} ({{fb.age}} {{lang.data.year}})
                             <span
                               ng-repeat="n in getStars(fb.rating)"
                               class="text-warning">
