--- a/html/register.html
+++ b/html/register.html
@@ -1,4 +1,5 @@
-<div class="container-fluid min-vh-100 d-flex flex-column justify-content-center align-items-center">
+<div class="container-fluid min-vh-100 d-flex flex-column 
+            justify-content-center align-items-center">
   <div class="card shadow-lg text-white w-75 my-5" 
        style="border-radius: 15px; overflow: hidden; min-width: 350px;">
     <div class="row g-0">
@@ -25,6 +26,7 @@
               <div class="mb-3">
                 <label for="register-last_name" 
                        class="form-label text-warning">
+                  <i class="fa-solid fa-star fa-2xs text-danger"></i>
                   <i class="fa-solid fa-user me-1"></i> 
                   {{lang.data.last_name}}:
                 </label>
@@ -45,6 +47,7 @@
               <div class="mb-3">
                 <label for="register-first_name" 
                        class="form-label text-warning">
+                  <i class="fa-solid fa-star fa-2xs text-danger"></i>
                   <i class="fa-solid fa-user me-1"></i> 
                   {{lang.data.first_name}}:
                 </label>
@@ -65,6 +68,7 @@
               <div class="mb-3">
                 <label for="register-born" 
                        class="form-label text-warning">
+                  <i class="fa-solid fa-star fa-2xs text-danger"></i>
                   <i class="fa-solid fa-calendar-days me-1"></i> 
                   {{lang.data.born}}:
                 </label>
@@ -121,6 +125,7 @@
 <!-------------------------Neme-------------------------->
               <div class="mb-3">
                 <label class="form-label text-warning">
+                  <i class="fa-solid fa-star fa-2xs text-danger"></i>
                   <i class="fa-solid fa-venus-mars me-1"></i> 
                   {{lang.data.gender}}:
                 </label>
@@ -131,6 +136,7 @@
                     type="radio"
                     class="form-check-input"
                     value="M"
+                    required
                     ng-model="model.register.gender">
                   <label for="register-male" 
                          class="form-check-label text-white">
@@ -144,6 +150,7 @@
                     type="radio"
                     class="form-check-input"
                     value="F"
+                    required
                     ng-model="model.register.gender">
                   <label for="register-female" 
                          class="form-check-label text-white">
@@ -159,6 +166,7 @@
 <!-----------------------------Email---------------------------------->
               <div class="mb-3 position-relative">
                 <label for="register-email" class="form-label text-warning">
+                    <i class="fa-solid fa-star fa-2xs text-danger"></i>
                     <i class="fa-solid fa-envelope me-1"></i> 
                     {{lang.data.email}}:
                 </label>
@@ -192,6 +200,7 @@
               <div class="mb-3">
                 <label for="register-emailConfirm" 
                        class="form-label text-warning">
+                    <i class="fa-solid fa-star fa-2xs text-danger"></i>
                   E-mail {{lang.data.confirmation}}:
                 </label>
                 <input 
@@ -217,6 +226,7 @@
               <div class="mb-3 position-relative">
                 <label for="register-password" 
                        class="form-label text-warning">
+                    <i class="fa-solid fa-star fa-2xs text-danger"></i>
                     <i class="fa-solid fa-key me-1"></i> 
                     {{lang.data.password}}:
                 </label>
@@ -263,6 +273,7 @@
               <div class="mb-3 position-relative">
                 <label for="register-passwordConfirm" 
                        class="form-label text-warning">
+                       <i class="fa-solid fa-star fa-2xs text-danger"></i>
                     {{lang.data.password}} {{lang.data.confirmation}}:
                 </label>
 
